# -bazel_uat_cypress

./: .bazelignore  BUILD  README.md  WORKSPACE  bazel-bazel-uat-cypress  bazel-bazel_uat_cypress  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/frontend-e2e/: BUILD.bazel  cypress.config.ts  package.json  tsconfig.json
apps/frontend-e2e/src/: global.d.ts
apps/frontend-e2e/src/e2e/: app.spec.ts
apps/frontend-e2e/src/support/: commands.ts
